toolchain/internal/core/analysis/testdata/errors/consts/object_spread_missing_const.vdl
// @expect: E205

const cfg = {
  ...missingConfig
  port 8080
}
